--- a/Front/Eventos-App/src/app/eventos/eventos.component.html
+++ b/Front/Eventos-App/src/app/eventos/eventos.component.html
@@ -1,7 +1,52 @@
-<h2>Eventos do Componente</h2>
+<h2>Eventos</h2>
+<hr>
 
-<div *ngFor="let evento of eventos">
-  <p> <b>Tema: </b>{{evento.tema}} </p>
-  <p> <b>Local: </b>{{evento.local}} </p>
-  <hr>
-</div>
+<!-- <form action="" class="form-inline">
+  <div class="form-group row-cols-3 mb-2">
+    <input type="text" class="form-control col col-md-1  m-1" placeholder="Buscar">
+    <button class="btn col col-md-1 m-1 btn-outline-success">Buscar</button>
+  </div>
+</form> -->
+
+<form action="" class="container form-inline">
+  <div class="row row-cols-auto form-group mb-2">
+    <div class="col">
+      <input type="text" class=" form-control"  placeholder="Buscar"/>
+    </div>
+    <div class="col">
+      <button class="btn btn-outline-success">Buscar</button>
+    </div>
+  </div>
+</form>
+
+<table class="table table-striped">
+  <thead class="table-dark">
+    <tr>
+      <th>#</th>
+      <th>Imagem</th>
+      <th>Tema</th>
+      <th>Local</th>
+      <th>Data</th>
+      <th>Qtd Pessoas</th>
+      <th>Lote</th>
+      <th>Opções</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let evento of eventos">
+      <td class="">{{evento.eventoID}}</td>
+      <td>{{evento.imagemURL}}</td>
+      <td>{{evento.tema}}</td>
+      <td>{{evento.local}}</td>
+      <td>{{evento.dataEvento}}</td>
+      <td>{{evento.qtdPessoas}}</td>
+      <td>{{evento.lote}}</td>
+      <td>
+        <div class="btn-gorup" role="group">
+          <button class="btn btn-outline-primary">Editar</button>
+          <button class="btn btn-outline-danger">Excluir</button>
+        </div>
+      </td>
+    </tr>
+  </tbody>
+</table>
